<resources>

    <string-array name="english_week_string_array">
        <item>Sun</item>
        <item>Mon</item>
        <item>Tue</item>
        <item>Wed</item>
        <item>Thu</item>
        <item>Fri</item>
        <item>Sat</item>
    </string-array>

    <string name="app_name">易团餐</string>
    <string name="network">请检查您的网络</string>
    <string name="join_company">加入公司</string>
    <string name="join_team">加入团队</string>
    <string name="create_team">创建团队</string>
    <string name="create_company">创建公司</string>
    <string name="welcome_use">欢迎使用易团餐,</string>
    <string name="pwd_login">密码登录</string>
    <string name="input_phone">请输入手机号码</string>
    <string name="input_pwd">请输入大于等于6位数密码</string>
    <string name="input_new_pwd">请输入新密码</string>
    <string name="input_code">请输入验证码</string>
    <string name="input_verification">请输入图形验证码</string>
    <string name="get_code">获取验证码</string>
    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="agree_agreement">点击登录即同意此APP的</string>
    <string name="agreement">《用户协议》</string>
    <string name="customer">客服咨询</string>
    <string name="again_get_code">重新获取验证码</string>
    <string name="get_codes">s后重发</string>
    <string name="input_right_phone">请输入正确的手机号</string>
    <string name="phone_register">账号注册</string>
    <string name="forget_pwd">忘记密码</string>
    <string name="personal_information">个人信息</string>
    <string name="schedule">日程</string>
    <string name="task">工作任务</string>
    <string name="team">团队</string>
    <string name="mine">我的</string>
    <string name="business_bulletin">企业公告</string>
    <string name="my_checkwork">我的请假</string>
    <string name="my_task">我的工作</string>
    <string name="leave">请假</string>
    <string name="attendance_management">考勤管理</string>
    <string name="customerservice">客服</string>
    <string name="notice">公告</string>
    <string name="setup">设置</string>
    <string name="enterprise_name">企业名称:</string>
    <string name="enterprise_legal_person">企业法人:</string>
    <string name="creditcode">统一社会信用代码:</string>
    <string name="enterprise_address">企业地址:</string>
    <string name="enterprise_scale">企业规模:</string>
    <string name="membership_list">成员名单</string>
    <string name="administrators">管理员</string>
    <string name="input_enterprise_address">请输入公司地址</string>
    <string name="input_creditcode">请输入信用代码</string>
    <string name="input_erterprise_legal_person">请输入企业法人</string>
    <string name="input_enterprise_name">请输入企业名称</string>
    <string name="enterprise_administrators">企业管理员</string>
    <string name="add">新增</string>
    <string name="delete">移除</string>
    <string name="add_administrators">新增管理员</string>
    <string name="add_member">添加成员</string>
    <string name="sure">确定</string>
    <string name="phone_num">手机号:</string>
    <string name="position">职务:</string>
    <string name="name">姓名:</string>
    <string name="input_name">请输入姓名</string>
    <string name="start">立即开启</string>
    <string name="foreman">班组长</string>
    <string name="chief_inspector">运营总监</string>
    <string name="manager">餐厅经理</string>
    <string name="person_in_charge">甲方负责人</string>
    <string name="photograph">拍照</string>
    <string name="photo">照片</string>
    <string name="cancel">取消</string>
    <string name="submission">提交</string>
    <string name="authentication">认证</string>
    <string name="restaurant_name">餐厅名称:</string>
    <string name="input_restaurant_name">请输入餐厅名称</string>
    <string name="nickname">别称</string>
    <string name="input_proof_material">上传证明材料</string>
    <string name="exception_submit">异常提交</string>
    <string name="submit_normally">正常提交</string>
    <string name="message">消息</string>
    <string name="update_state">更新状态</string>
    <string name="add_schedule">新建日程</string>
    <string name="urgent_task">紧急任务</string>
    <string name="general_task">派发任务</string>
    <string name="addnotice">添加公告</string>
    <string name="release">发布</string>
    <string name="attendance_date">考勤日期</string>
    <string name="setting">设置</string>
    <string name="account_management">账户管理</string>
    <string name="clear_cache">清除缓存</string>
    <string name="new_version">检查新版本</string>
    <string name="account_information">账号信息</string>
    <string name="change_password">更改密码</string>
    <string name="personal_data">修改资料</string>
    <string name="avatar">头像</string>
    <string name="invitation">邀请</string>
    <string name="restaurant_nickname">餐厅别称:</string>
    <string name="school">学校/校区</string>
    <string name="restaurant_address">餐厅地址:</string>
    <string name="input_restaurant_address">请输入餐厅地址</string>
    <string name="belong_to_company">所属公司</string>
    <string name="input_company_name">请输入公司名称</string>
    <string name="time">6:00</string>
    <string name="agree">同意</string>
    <string name="refuse">拒绝</string>
    <string name="apply">申请</string>
    <string name="in_audit">审核中</string>
    <string name="audit_reject">被拒绝，点击重新申请</string>
</resources>
