<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fillet_white"
    android:orientation="vertical">

    <TextView
        android:id="@+id/chief_inspector"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/chief_inspector"
        android:textColor="@color/text_default"
        android:textSize="@dimen/sp_18" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@color/line_color" />

    <TextView
        android:id="@+id/manager"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/manager"
        android:textColor="@color/text_default"
        android:textSize="@dimen/sp_18" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@color/line_color" />

    <TextView
        android:id="@+id/foreman"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/foreman"
        android:textColor="@color/text_default"
        android:textSize="@dimen/sp_18" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@color/line_color" />


    <TextView
        android:id="@+id/person_in_charge"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/person_in_charge"
        android:textColor="@color/text_default"
        android:textSize="@dimen/sp_18" />
</LinearLayout>