<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/line_color"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".activity.ForgetPwdActivity">

    <RelativeLayout style="@style/TitleStyle_Relative">

        <ImageView
            android:id="@+id/back"
            style="@style/TitleStyle_Back" />

        <TextView
            style="@style/TitleStyle_Text"
            android:text="@string/change_password" />

        <TextView
            android:id="@+id/sure"
            style="@style/righttext"
            android:text="@string/sure" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_14"
        android:background="@drawable/fillet_white"
        android:orientation="vertical"
        android:paddingLeft="@dimen/dp_14"
        android:paddingRight="@dimen/dp_14">

        <EditText
            android:id="@+id/input_phone_ed"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_40"
            android:background="@null"
            android:hint="@string/input_phone"
            android:inputType="number"
            android:singleLine="true"
            android:textSize="@dimen/sp_14" />

        <TextView style="@style/line" />

        <EditText
            android:id="@+id/input_pwd_ed"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_40"
            android:background="@null"
            android:hint="@string/input_new_pwd"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textSize="@dimen/sp_14" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:background="@color/line_color" />

        <LinearLayout
            android:id="@+id/code_linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/input_code_ed"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_40"
                    android:background="@null"
                    android:hint="@string/input_code"
                    android:inputType="number"
                    android:singleLine="true"
                    android:textSize="@dimen/sp_14" />

            </LinearLayout>

            <TextView
                android:id="@+id/get_code_tv"
                style="@style/AppWrapStyle"
                android:background="@drawable/fillet_blue_more"
                android:gravity="center"
                android:text="@string/get_code"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_14" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:background="@color/line_color" />
    </LinearLayout>
</LinearLayout>