<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/fillet_white"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:gravity="center"
            android:id="@+id/photograph_tv"
            android:text="@string/photograph"
            android:textColor="@color/text_default"
            android:textSize="@dimen/sp_18" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:background="@color/line_color" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:layout_marginTop="@dimen/dp_5"
            android:gravity="center"
            android:id="@+id/photo_tv"
            android:text="@string/photo"
            android:textColor="@color/text_default"
            android:textSize="@dimen/sp_18" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginBottom="@dimen/dp_10"
        android:background="@drawable/fillet_white"
        android:gravity="center"
        android:id="@+id/cancel_tv"
        android:text="@string/cancel"
        android:textColor="@color/text_default"
        android:textSize="@dimen/sp_18" />
</LinearLayout>